--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "depoly": "node app.js",
-    "start": "nodemon app.js"
+    "depoly": "nodemon app.js",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
